--- a/main.ipynb
+++ b/main.ipynb
@@ -3,18 +3,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to Elasticsearch\n",
+      "{'cluster_name': 'docker-cluster',\n",
+      " 'cluster_uuid': 'd79O2-kjQU2ry7Ws7Kz24g',\n",
+      " 'name': '16621f691b8c',\n",
+      " 'tagline': 'You Know, for Search',\n",
+      " 'version': {'build_date': '2024-08-05T10:05:34.233336849Z',\n",
+      "             'build_flavor': 'default',\n",
+      "             'build_hash': '1a77947f34deddb41af25e6f0ddb8e830159c179',\n",
+      "             'build_snapshot': False,\n",
+      "             'build_type': 'docker',\n",
+      "             'lucene_version': '9.11.1',\n",
+      "             'minimum_index_compatibility_version': '7.0.0',\n",
+      "             'minimum_wire_compatibility_version': '7.17.0',\n",
+      "             'number': '8.15.0'}}\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "from elasticsearch import Elasticsearch\n",
+    "\n",
+    "#install elasticsearch locally and run it on port 9200\n",
+    "es = Elasticsearch('http://localhost:9200')\n",
+    "client_info = es.info()\n",
+    "print(\"Connected to Elasticsearch\")\n",
+    "pprint(client_info.body)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'my_index'})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.indices.delete(index='my_index', ignore_unavailable=True)\n",
+    "es.indices.create(index='my_index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Elastic_Search-Aso2Insy",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
